{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 42,
  "lineage": "3613fc26-5793-783b-cb51-08cf1cd465f8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087de15a22879b9ef",
            "arn": "arn:aws:ec2:us-east-1:756864489677:instance/i-0c7313a52f0c28ec1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c7313a52f0c28ec1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e27d6b9384fca06a",
            "private_dns": "ip-172-31-84-157.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.84.157",
            "public_dns": "ec2-54-173-51-169.compute-1.amazonaws.com",
            "public_ip": "54.173.51.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06fce6fd1dcfbb81a",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ffe6e1d46b99f3fc",
            "tags": {
              "Name": "Test server"
            },
            "tags_all": {
              "Name": "Test server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-01be61031edd46f83"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "server_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756864489677:internet-gateway/igw-0979512b0d3ccf8ae",
            "id": "igw-0979512b0d3ccf8ae",
            "owner_id": "756864489677",
            "tags": {
              "Name": "terraformVPC"
            },
            "tags_all": {
              "Name": "terraformVPC"
            },
            "vpc_id": "vpc-04c6f4b0c01a2ae9b"
          },
          "dependencies": [
            "aws_vpc.server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "serverRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756864489677:route-table/rtb-09f90feff0e7b9908",
            "id": "rtb-09f90feff0e7b9908",
            "owner_id": "756864489677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0979512b0d3ccf8ae",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route table "
            },
            "tags_all": {
              "Name": "route table "
            },
            "timeouts": null,
            "vpc_id": "vpc-04c6f4b0c01a2ae9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.server_gw",
            "aws_vpc.server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subnet_RT_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020226c098aa3b27f",
            "route_table_id": "rtb-09f90feff0e7b9908",
            "subnet_id": "subnet-07c1c2e20c7a7799d"
          },
          "dependencies": [
            "aws_internet_gateway.server_gw",
            "aws_route_table.serverRT",
            "aws_subnet.pub_subnet",
            "aws_vpc.server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756864489677:security-group/sg-05d0b89b3a81cd581",
            "description": "Example security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d0b89b3a81cd581",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "example-sg",
            "name_prefix": "",
            "owner_id": "756864489677",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d34704157e70e4a4"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756864489677:subnet/subnet-0d7dcbddd5919cdf0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7dcbddd5919cdf0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "756864489677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public subnet"
            },
            "tags_all": {
              "Name": "Public subnet"
            },
            "vpc_id": "vpc-04c6f4b0c01a2ae9b"
          },
          "dependencies": [
            "aws_vpc.server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756864489677:subnet/subnet-07c1c2e20c7a7799d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c1c2e20c7a7799d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "756864489677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public subnet"
            },
            "tags_all": {
              "Name": "Public subnet"
            },
            "vpc_id": "vpc-04c6f4b0c01a2ae9b"
          },
          "dependencies": [
            "aws_vpc.server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "server_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756864489677:vpc/vpc-04c6f4b0c01a2ae9b",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0255e6e1de5a675a6",
            "default_route_table_id": "rtb-0a43d870b2ba24122",
            "default_security_group_id": "sg-0a176398478d48efc",
            "dhcp_options_id": "dopt-0bdbb78fbc11f78f5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04c6f4b0c01a2ae9b",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-01032436205abb91a",
            "ipv6_cidr_block": "2600:1f10:41b1:bc00::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a43d870b2ba24122",
            "owner_id": "756864489677"
          }
        }
      ]
    }
  ]
}